<resources>
    <string name="app_name">MOTOTRACER X</string>
    <string name="Texto1">Encuentra tu compañera ideal.</string>
    <string name="btnComenzar">Comienza</string>
    <string name="btnRegistrar">Registrate</string>
    <string name="TxtLogin">La aventura esta por iniciar, porfavor inicia sesion</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRecuperar">Recupera tu contraseña</string>
    <string name="btnGoogle">Ingresa con Google</string>
    <string name="txtRegistrate">No tienes cuenta?</string>
    <string name="logo_de_la_aplicacion">Logo de la Aplicacion</string>
    <string name="tienda_virtual">Tienda Virtual</string>
    <string name="inicio">Inicio</string>
    <string name="carrito">Carrito</string>
    <string name="perfil">Perfil</string>
    <string name="menu">Menu</string>
    <string name="salir">Salir</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="productos">Productos</string>
    <string name="categorias">Categorias</string>
    <string name="open_drawer">menu abierto</string>
    <string name="close_drawer">menu cerrado</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="tiendas">Editar Tiendas</string>
    <string name="default_web_client_id">446448742844-9jgsb5bjf265g1it0k9hq59uqvnuvr22.apps.googleusercontent.com</string>


    <string name="anio_precio">%1$s · %2$s</string>

</resources>
