<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/nav_graph"
    app:startDestination="@id/inicioFragment">

    <fragment
        android:id="@+id/inicioFragment"
        android:name="com.example.taller2.fragments.InicioFragment"
        android:label="@string/inicio">
        <action
            android:id="@+id/action_inicioFragment_to_productosFragment"
            app:destination="@id/productosFragment" />
    </fragment>

    <fragment
        android:id="@+id/productosFragment"
        android:name="com.example.taller2.fragments.ProductosFragment"
        android:label="@string/productos" />

    <fragment
        android:id="@+id/carritoFragment"
        android:name="com.example.taller2.fragments.CarritoFragment"
        android:label="@string/carrito">
        <action
            android:id="@+id/action_carritoFragment_to_productosFragment"
            app:destination="@id/productosFragment" />
    </fragment>

    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.example.taller2.fragments.PerfilFragment"
        android:label="Perfil">
        <action
            android:id="@+id/action_perfilFragment_to_editarPerfilFragment"
            app:destination="@id/editarPerfilFragment"
            app:popUpTo="@id/perfilFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/editarPerfilFragment"
        android:name="com.example.taller2.fragments.EditarPerfilFragment"
        android:label="@string/editar_perfil">
        <action
            android:id="@+id/action_editarPerfilFragment_to_perfilFragment"
            app:destination="@id/perfilFragment"
            app:popUpTo="@id/perfilFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_editarPerfilFragment_to_inicioFragment"
            app:destination="@id/inicioFragment"
            app:popUpTo="@id/inicioFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/CategoriasFragment"
        android:name="com.example.taller2.fragments.CategoriasFragment"
        android:label="@string/categorias">
        <action
            android:id="@+id/action_CategoriasFragment_to_inicioFragment"
            app:destination="@id/inicioFragment" />
        <action
            android:id="@+id/action_CategoriasFragment_to_SuzukiFragment"
            app:destination="@id/SuzukiFragment" />
        <action
            android:id="@+id/action_CategoriasFragment_to_KtmFragment"
            app:destination="@id/KTMFragment" />
        <action
            android:id="@+id/action_CategoriasFragment_to_YamahaFragment"
            app:destination="@id/YamahaFragment" />
        <action
            android:id="@+id/action_CategoriasFragment_to_DucatiFragment"
            app:destination="@id/DucatiFragment" />
        <action
            android:id="@+id/action_CategoriasFragment_to_KawasakiFragment"
            app:destination="@id/KawasakiFragment" />
    </fragment>

    <fragment
        android:id="@+id/KTMFragment"
        android:name="com.example.taller2.fragments.KtmFragment"
        android:label="Ropa">
        <action
            android:id="@+id/action_KTMFragment_to_CategoriasFragment"
            app:destination="@id/CategoriasFragment" />
</fragment>

    <fragment
        android:id="@+id/YamahaFragment"
        android:name="com.example.taller2.fragments.YamahaFragment"
        android:label="Hogar" />
    <action
        android:id="@+id/action_YamahaFragment_to_CategoriasFragment"
        app:destination="@id/CategoriasFragment" />

    <fragment
        android:id="@+id/DucatiFragment"
        android:name="com.example.taller2.fragments.DucatiFragment"
        android:label="Deportes" />
    <action
        android:id="@+id/action_DucatiFragment_to_CategoriasFragment"
        app:destination="@id/CategoriasFragment" />

    <fragment
        android:id="@+id/SuzukiFragment"
        android:name="com.example.taller2.fragments.SuzukiFragment"
        android:label="Accesorios" >
        <action
            android:id="@+id/action_SuzukiFragment_to_CategoriasFragment"
            app:destination="@id/CategoriasFragment" />
    </fragment>

    <fragment
        android:id="@+id/KawasakiFragment"
        android:name="com.example.taller2.fragments.KawasakiFragment"
        android:label="Electrónica" />
    <action
        android:id="@+id/action_KawasakiFragment_to_CategoriasFragment"
        app:destination="@id/CategoriasFragment" />
    <fragment
        android:id="@+id/tiendaFragment"
        android:name="com.example.taller2.fragments.TiendaFragment"
        android:label="@string/tiendas"/>
    <fragment
        android:id="@+id/crearMotoFragment"
        android:name="com.example.taller2.fragments.CrearMotoFragment"
        android:label="Crear Moto"
        tools:layout="@layout/fragment_crear_moto" />



</navigation>
