<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iniciosesion">


    <EditText
        android:id="@+id/int_name_pg3"
        style="@style/EditTextRounded"
        android:layout_width="266dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Nombre"
        android:inputType="text"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <EditText
        android:id="@+id/int_psw_pg3"
        android:layout_width="262dp"
        android:layout_height="37dp"
        android:background="@drawable/edit_text_rounded"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="text"
        android:textColor="@color/Negro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="247dp"
        android:layout_height="42dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/boton_redondeado_parcial"
        android:text="@string/btnIngresar"
        android:textColor="@color/Blanco"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ReCuenta_pg3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/int_psw_pg3"
        app:layout_constraintVertical_bias="0.757" />

    <TextView
        android:id="@+id/ReCuenta_pg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="116dp"
        android:text="@string/btnRecuperar"
        android:textColor="@color/Negro"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIngresar"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/txtSinCuenta_pg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtRegistrate"
        android:textColor="@color/Negro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReCuenta_pg3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvRegistrar"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/btnRegistrar"
        android:textColor="@color/azul_oscuro_parcial"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtSinCuenta_pg3"
        app:layout_constraintTop_toBottomOf="@+id/ReCuenta_pg3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="84dp"
        android:layout_height="77dp"
        app:layout_constraintBottom_toTopOf="@+id/int_name_pg3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logomototracer" />

    <ImageView
        android:id="@+id/btnGoogle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/boton_redondeado_parcial"
        android:clickable="true"
        android:contentDescription="Botón Google"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995" />


</androidx.constraintlayout.widget.ConstraintLayout>